2006-08-27  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + Replaced static paths to external programs by $(which statement).
	    (closes: #114)
	* t/testlib.sh:
	  + Applied the same changes to the teslib.sh library so the test scripts
	    behave the same way.

2006-08-27  Alexis Sukrieh  <sukria@backup-manager.org>

	* BackupManager/Logger.pm:
	  + Applied patch from ilya margolin for propagating 
	    BM_LOGGER_FACILITY (closes #115).
	* backup-manager:
	  + Added a copyright header when BM is launched on verbose mode.

2006-08-07  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/backup-methods.sh:
	  + the dar build commandline is now working.
	    (closes: #109)

2006-08-05  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + Possible to use BM with an unprivileged user thanks to the new path
	  used for the lockfile if run by a non-root user.

2006-08-05  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager-upload:
	* lib/upload-methods.sh:
	  + No more su to $BM_UPLOAD_USER, it's useless.
	    (closes: #105)

2006-07-05  Alexis Sukrieh  <sukria@backup-manager.org>
	
	[ Add support for local encryption with GPG - closes: #82 ]
	* backup-manager:
	  + path to /usr/bin/gpg
	* backup-manager.conf.tpl:
	  + New configuration variables
	    - BM_ENCRYPTION_METHOD (gpg, none)
		- BM_ENCRYPTION_RECIPIENT (gpg ID)
	* lib/backup-methods.sh:
	   + Support for encrypted archives, the build command is piped to gpg
	   	 directly.
	* t/testlib.sh:
	   + path to /usr/bin/gpg
	* t/t18-tarball-encryption.sh:
	   + Test script for that new feature (builds a tar.gz.gpg archive).

2006-07-03  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/burning-methods.sh:
	  + Fix the way md5 sums are checked (closes: #92)
	* lib/md5sum.sh:
	  + safe_unmount() now works correctly and is able to unmount several
	  times the media pointed by $BM_BURNING_DEVICE.
	* po/fr.po:
	  + Fix about a bad translated message.
