@@ -1,5 +1,12 @@
 2006-08-27  Alexis Sukrieh  <sukria@backup-manager.org>
 
+	* lib/sanitize.sh:
+	  + BM_UPLOAD_SSH_HOSTS, BM_UPLOAD_SSH_USER and
+	    BM_UPLOAD_SSH_KEY are mandatory if BM_TARBALL_OVER_SSH is set to "true".
+		(closes: #97).
+
+2006-08-27  Alexis Sukrieh  <sukria@backup-manager.org>
+
 	* backup-manager:
 	  + Replaced static paths to external programs by $(which statement).
 	    (closes: #114)
